# Pargon

./: .gitmodules  CMakeLists.txt  README.md
Samples/Playground/: CMakeLists.txt  Main.Win32.cpp
Samples/Playground/Assets/: Material.hlsl
Templates/HeaderLibrary/: CMakeLists.txt
Templates/Module/: CMakeLists.txt
Templates/SourceLibrary/: CMakeLists.txt  Info.txt
